<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/ad_blocking">
        <SwitchPreference
            android:key="ad_blocker_enabled"
            android:title="@string/enable_ad_blocker"
            android:summary="@string/block_ads_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="yt_ad_blocker_enabled"
            android:title="@string/enable_yt_blocker"
            android:summary="@string/block_yt_ads_summary"
            android:defaultValue="true"
            android:dependency="ad_blocker_enabled" />

        <SwitchPreference
            android:key="block_tracking_enabled"
            android:title="@string/block_tracking"
            android:summary="@string/block_tracking_summary"
            android:defaultValue="true"
            android:dependency="ad_blocker_enabled" />

        <SwitchPreference
            android:key="block_scripts_enabled"
            android:title="@string/block_scripts"
            android:summary="@string/block_scripts_summary"
            android:defaultValue="false"
            android:dependency="ad_blocker_enabled" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/browser_settings">
        <EditTextPreference
            android:key="home_page"
            android:title="@string/home_page"
            android:summary="@string/home_page_summary"
            android:defaultValue="https://www.google.com" />

        <SeekBarPreference
            android:key="text_size"
            android:title="@string/text_size"
            android:summary="@string/text_size_summary"
            android:defaultValue="100"
            android:min="50"
            android:max="200" />

        <SwitchPreference
            android:key="javascript_enabled"
            android:title="@string/javascript_enabled"
            android:summary="@string/javascript_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/privacy">
        <SwitchPreference
            android:key="cookies_enabled"
            android:title="@string/cookies_enabled"
            android:summary="@string/cookies_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="cache_enabled"
            android:title="@string/cache_enabled"
            android:summary="@string/cache_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="history_enabled"
            android:title="@string/history_enabled"
            android:summary="@string/history_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/media">
        <SwitchPreference
            android:key="media_autoplay_enabled"
            android:title="@string/media_autoplay"
            android:summary="@string/media_autoplay_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
